--- a/redi.htm
+++ b/redi.htm
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8" />
-        <meta http-equiv="refresh" content="https://estilolibre.online/ganagratis" id="redirectURL" />
+        <meta http-equiv="refresh" content="https://chat.estilolibre.online/ganagratis" id="redirectURL" />
         <title>Redirecionando...</title>
     </head>
     <body>
@@ -23,7 +23,7 @@
             var utm_medium = getParameterByName("utm_medium");
             var utm_content = getParameterByName("utm_content");
 
-            var redirectURL = "https://estilolibre.online/ganagratis";
+            var redirectURL = "https://chat.estilolibre.online/ganagratis";
             redirectURL += "?utm_source=" + utm_source;
             redirectURL += "&utm_campaign=" + utm_campaign;
             redirectURL += "&utm_medium=" + utm_medium;
